<resources>
    <string name="app_name" translatable="false">PivotLabs</string>
    <string name="title_activity_login">Sign in</string>
    <string name="txt_sign_up">Sign up</string>
    <string name="txt_register">Register</string>
    <string name="txt_clear">Clear</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_username">username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="paciente">Patient</string>
    <string name="profissional">Professional</string>

    <string name="txt_agede_consulta">Schedule an appointment</string>


    <string name="txt_contato">Contact us</string>
    <string name="txt_quem_somos">About us</string>


    <!--Informacoes extras-->
    <string name="email_address">pivotlabs@gmail.com</string>


    <!--Texts dedicated to the sign up area-->
    <string name="txt_preson_definition">I am a:</string>

    <!--Activity Quem somos-->
    <string name="textao_quem_somos">
        We are a tech start-up aiming to build a better world by the wellbeing and comfort of the people.
        Bringing innovation with sustainability.
    </string>

    <!--ProfessionalSelectActivity-->
    <string-array name="speciality">
        <item>All</item>
        <item>Dermatologist</item>
        <item>Nutritionist</item>
    </string-array>

    <string-array name="city_names">
        <item>All</item>
        <item>Cabo de Santo Agostinho</item>
        <item>Camaragibe</item>
        <item>Jaboatão</item>
        <item>Recife</item>
        <item>São Lourenço</item>
    </string-array>

    <string-array name="day_periods">
        <item>All</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
    </string-array>


    <!--Professional Detail Activity-->
    <string name="schedules">Schedules:</string>
        <!-- Fragment DayPeriodFragment -->
        <string name="text_available_dayperiods">Available Dayperiods</string>
        <!-- Fragment Appointment -->
        <string name="text_appointment">Appointments</string>
            <!--Appointment Items-->
            <string name="text_start">Start:</string>
            <string name="text_finish">Finish:</string>
            <string name="text_choose">Choose</string>
            <string name="text_taken">Taken</string>
    <string name="text_cancel">cancel</string>
    <!--Dialog appointment-->
    <string name="text_dialog">
        Remember that in case of no-showing to an appointment a tax will be charged to you.
        Are you sure you want to proceed?
    </string>
    <string name="text_warning">Warning</string>

    <string name="text_storing_problem">There has been a problem while trying to save the appointment to remote</string>
    <string name="text_storing_success">The data has been successfully stored in the dataset</string>
    <string name="text_appointment_taken">Sorry, but the data is already taken</string>
    <string name="available_days">Available Days</string>
    <string name="ok">OK</string>

</resources>
