<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:text="@string/text_warning"
            android:textColor="#ff0000"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>

    <TextView
            android:text="@string/text_dialog"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" style="?android:attr/buttonBarStyle"
            android:layout_marginVertical="16dp">

        <Button
                android:id="@+id/btnDialogCancel"
                android:text="@string/text_cancel"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" style="?android:attr/buttonBarStyle" android:textAllCaps="true"/>
        <Button
                android:id="@+id/btnDialogOk"
                android:text="@string/ok"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" style="?android:attr/buttonBarStyle"/>


    </LinearLayout>
</LinearLayout>