<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signup.view.SignUpActivity"
        android:background="@drawable/background_default_color">

    <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:cardCornerRadius="16dp"
            android:background="@color/colorPrimaryDark"
    >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
            >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/txt_sign_up"
                />
                <EditText
                        android:id="@+id/edtUserEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/prompt_email"
                />
                <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:inputType="textPassword"
                        android:hint="@string/prompt_password"
                />

                <EditText
                        android:id="@+id/edtConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:inputType="textPassword"
                        android:hint="@string/prompt_confirm_password"
                />
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_margin="12dp"
                        android:gravity="center"
                >
                        <Button
                                android:id="@+id/btnRegister"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_register"
                        />
                        <Button
                                android:id="@+id/btnClear"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_clear"
                                android:layout_marginStart="16dp"
                                android:background="#FF0000"
                                android:textColor="@color/white"
                                android:radius="8dp"
                        />
                </LinearLayout>
            </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
