<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent">


        <!--Cabecalho-->
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="16dp"
                android:layout_margin="20dp"
        >
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:layout_margin="8dp"
                          android:gravity="center_horizontal"
            >

                <!--Botoes Paciente & Profissional-->
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnPaciente"
                            android:text="@string/paciente"

                    />
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnProfissional"
                            android:text="@string/profissional"

                    />
                </LinearLayout>

                <!--Texto bem vindo-->
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18pt"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="50dp"
                        android:text="@string/welcome"
                />

                <!--Botao Agende sua consulta-->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                >
                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_agede_consulta"
                    />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Segundo Cabecalho-->

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_horizontal"

        >
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_call_black_24dp"
                        android:scaleX="30"/>
            </RelativeLayout>
        </LinearLayout>

        <!--Rodape-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:background="@color/black"
                android:id="@+id/footMainActivity">
            <android.widget.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEmail"
                    android:text="@string/email_address"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
            />
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
