<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.ui.LoginActivity" android:paddingVertical="12dp">

    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="16dp" app:cardPreventCornerOverlap="true"
            app:contentPadding="20dp" app:cardCornerRadius="16dp" app:cardBackgroundColor="#4DB6AC"
            app:cardUseCompatPadding="true" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
    >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center_horizontal">
            <TextView
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" android:textColor="@android:color/white" android:textSize="42sp"
                    android:textStyle="bold" android:textAllCaps="false" android:layout_marginBottom="8dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email" android:inputType="textEmailAddress"
                        android:paddingStart="8dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password" android:inputType="textPassword"
                        android:paddingStart="8dp"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                    android:text="@string/action_sign_in_short"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button" android:backgroundTint="#64FFDA"
                    android:textAllCaps="false" android:foregroundGravity="center_horizontal"
                    android:includeFontPadding="true" android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" android:layout_marginTop="8dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:gravity="bottom">
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                android:textAlignment="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>