<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".about.view.AboutActivity" android:background="@drawable/background_default_color">


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/cvQuemSomos"
            android:paddingVertical="4dp" android:paddingHorizontal="4dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="128dp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_home_black_24dp"
                android:layout_marginHorizontal="8dp" android:background="@drawable/btn_rounded"
                android:paddingHorizontal="12dp"
                android:backgroundTint="@color/colorPrimary"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/paciente"
                android:id="@+id/btnPaciente"
                android:background="@drawable/btn_rounded" android:paddingLeft="16dp"
                android:paddingRight="16dp" android:textAllCaps="false" android:layout_marginHorizontal="8dp"
                android:backgroundTint="@color/colorPrimary" android:layout_weight="1"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/profissional"
                android:id="@+id/btnProfissional"
                android:paddingLeft="16dp" android:paddingRight="16dp"
                android:background="@drawable/btn_rounded" android:textAllCaps="false"
                android:layout_marginHorizontal="8dp" android:backgroundTint="@color/colorPrimary"
                android:layout_weight="1"/>
    </LinearLayout>
    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cvQuemSomos"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="16dp"
            app:cardElevation="19dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
        >
            <android.widget.TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:text="@string/textao_quem_somos"
            />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>